# MaksPortfolio

./: CMakeLists.txt  Main.sublime-workspace  MaksGreetingProgram.html  MaksMapGame.py  MaksPortfolio.code-workspace  README.md  greeting.html  index.html  objectOriented.js  pythondocs.html
AI_Attendance_Program/: CMakeLists.txt
CodeAcademy/: main.css
CodeAcademyWebsiteByMak/: main.css
Maks-freeCodeCampFullProgrammerCourse/: index.html  temporarycss.css
MaksPythonMapGame/: MaksMapGame.py  Test.py
MaksSampleCSS_JSprograms /: MaksCSS_BS.html  MaksCSS_BS.html.txt
MaksSampleCSS_JSprograms /HTML & JavaScript Greeting prog./: noconsole.html
MaksSampleCSS_JSprograms /IconBarBootstrapCSS/: MaksCSS_BS.html  iconbar.css
